--- a/lesson_24/style.css
+++ b/lesson_24/style.css
@@ -28,6 +28,12 @@ body {
 
 .weatherDesc {
   margin: 10px 0px 10px;
+  color: darkmagenta;
+  font-style: italic;
+}
+
+.conten-api {
+    display: none;
 }
 
 /* HTML: <div class="loader"></div> */
