--- a/lesson_04/onlineKino/style.css
+++ b/lesson_04/onlineKino/style.css
@@ -1,17 +1,17 @@
 * {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
 
 body {
-    position: relative;
-    /* Чтобы позиционировать другие элементы относительно него */
-    font-family: Arial, sans-serif;
-    display: flex;
-    flex-direction: column;
-    min-height: 100vh;
-    background-color: #141414;
+  position: relative;
+  /* Чтобы позиционировать другие элементы относительно него */
+  font-family: Arial, sans-serif;
+  display: flex;
+  flex-direction: column;
+  min-height: 100vh;
+  background-color: #141414;
 }
 
 /* .container {
@@ -21,230 +21,230 @@ body {
 } */
 
 header {
-    position: fixed;
-    top: 0;
-    width: 100%;
-    z-index: 1;
-    /* Устанавливаем высший уровень слоя для блока header */
-    background-color: transparent;
+  position: fixed;
+  top: 0;
+  width: 100%;
+  z-index: 1;
+  /* Устанавливаем высший уровень слоя для блока header */
+  background-color: transparent;
 }
 
 main {
-    position: relative;
-    /* Чтобы позиционировать содержимое относительно блока main */
-    flex: 1;
-    /* main будет занимать собой все пространство */
+  position: relative;
+  /* Чтобы позиционировать содержимое относительно блока main */
+  flex: 1;
+  /* main будет занимать собой все пространство */
 }
 
 .nav-links {
-    list-style: none;
-    display: flex;
+  list-style: none;
+  display: flex;
 }
 
 .nav-links li {
-    margin-right: 20px;
+  margin-right: 20px;
 }
 
 .nav-links a {
-    color: #fff;
-    text-decoration: none;
+  color: #fff;
+  text-decoration: none;
 }
 
 .hero {
-    background-image: url('img/banner.webp');
-    background-size: cover;
-    background-position: center;
-    padding: 400px 0;
-    top: 0;
-    /* z-index: -1; */
-    width: 100%;
-    height: auto;
-    position: relative;
+  background-image: url('img/banner.webp');
+  background-size: cover;
+  background-position: center;
+  padding: 400px 0;
+  top: 0;
+  /* z-index: -1; */
+  width: 100%;
+  height: auto;
+  position: relative;
 }
 
 .banner-title {
-    margin-left: 10%;
-    color: #fff;
-    position: absolute;
-    top: 280px;
+  margin-left: 10%;
+  color: #fff;
+  position: absolute;
+  top: 280px;
 }
 
 .banner-title h1 {
-    font-size: 3rem;
-    margin-bottom: 20px;
+  font-size: 3rem;
+  margin-bottom: 20px;
 }
 
 .banner-title p {
-    font-size: 1.2rem;
-    margin-bottom: 30px;
+  font-size: 1.2rem;
+  margin-bottom: 30px;
 }
 
-.banner-title>button {
-    background-color: #e50914;
-    border-radius: 8px;
-    color: #fff;
-    padding: 10px 20px;
-    font-size: 1rem;
-    border: none;
-    cursor: pointer;
-    /* transition: background-color 0.3s ease; */
+.banner-title > button {
+  background-color: #e50914;
+  border-radius: 8px;
+  color: #fff;
+  padding: 10px 20px;
+  font-size: 1rem;
+  border: none;
+  cursor: pointer;
+  /* transition: background-color 0.3s ease; */
 }
 
-.banner-title>button:hover {
-    background-color: #b20710;
-    /* cursor: pointer; */
+.banner-title > button:hover {
+  background-color: #b20710;
+  /* cursor: pointer; */
 }
 
 footer {
-    background-color: #000;
-    color: #fff;
-    text-align: center;
-    padding: 20px 0;
+  background-color: #000;
+  color: #fff;
+  text-align: center;
+  padding: 20px 0;
 }
 
-.logo>img {
-    height: 80px;
-    /* width: 60px; */
+.logo > img {
+  height: 80px;
+  /* width: 60px; */
 }
 
 .menu {
-    display: flex;
-    justify-content: start;
-    align-items: center;
-    background-color: hsla(0, 0%, 0%, 0.4);
-    padding-left: 10px;
-    padding-right: 10px;
-    min-height: 100px;
+  display: flex;
+  justify-content: start;
+  align-items: center;
+  background-color: hsla(0, 0%, 0%, 0.4);
+  padding-left: 10px;
+  padding-right: 10px;
+  min-height: 100px;
 }
 
 .container-menu {
-    margin-left: 50px;
+  margin-left: 50px;
 }
 
 .secondary-navigation {
-    display: flex;
-    align-items: center;
-    margin-left: auto;
-    margin-right: 20px;
+  display: flex;
+  align-items: center;
+  margin-left: auto;
+  margin-right: 20px;
 }
 
-.whiteImg>img {
-    filter: invert(100%) sepia(0%) saturate(0%) hue-rotate(0deg) brightness(100%) contrast(100%);
-
+.whiteImg > img {
+  filter: invert(100%) sepia(0%) saturate(0%) hue-rotate(0deg) brightness(100%)
+    contrast(100%);
 }
 
 .nav-element {
-    padding-left: 10px;
-    color: white;
-    font-size: small;
-    cursor: pointer;
+  padding-left: 10px;
+  color: white;
+  font-size: small;
+  cursor: pointer;
 }
 
-.profile>img {
-    border-radius: 4px;
+.profile > img {
+  border-radius: 4px;
 }
 
 .caret {
-    border-color: #fff transparent transparent;
-    border-style: solid;
-    border-width: 5px 5px 0;
-    height: 0;
-    margin-left: 10px;
-    transition: transform 367ms cubic-bezier(.21, 0, .07, 1);
-    width: 0;
+  border-color: #fff transparent transparent;
+  border-style: solid;
+  border-width: 5px 5px 0;
+  height: 0;
+  margin-left: 10px;
+  transition: transform 367ms cubic-bezier(0.21, 0, 0.07, 1);
+  width: 0;
 }
 
 .content {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-around;
-    padding: 20px;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-around;
+  padding: 20px;
 }
 
 .promo-video {
-    width: 209px;
-    height: 118px;
-    margin: 20px;
-    /* background-color: lightgrey; */
-    border: 1px solid grey;
-    border-radius: 10px;
-    cursor: pointer;
+  width: 209px;
+  height: 118px;
+  margin: 20px;
+  /* background-color: lightgrey; */
+  border: 1px solid grey;
+  border-radius: 10px;
+  cursor: pointer;
 }
 
 .promo-video:hover {
-    box-shadow: 0 0 5px 0 white;
+  box-shadow: 0 0 5px 0 white;
 }
 
-.promo-video>img {
-    width: 100%;
-    border-radius: 10px;
+.promo-video > img {
+  width: 100%;
+  border-radius: 10px;
 }
 
 .title {
-    color: #fff;
-    font-size: 2rem;
-    margin-left: 10%;
-    margin-top: 10px;
-    /* margin-bottom: 10px; */
+  color: #fff;
+  font-size: 2rem;
+  margin-left: 10%;
+  margin-top: 10px;
+  /* margin-bottom: 10px; */
 }
 
 /* Grid */
 .gridContent {
-    width: 100%;
-    display: grid;
-    gap: 20px;
-    grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
-    grid-auto-rows: 400px;
-    padding: 10px 30px 30px 30px;
+  width: 100%;
+  display: grid;
+  gap: 20px;
+  grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
+  grid-auto-rows: 400px;
+  padding: 10px 30px 30px 30px;
 }
 
 .gridItemAdaptiv {
-    /* background-color: beige; */
-    width: 100%;
-    height: 100%;
-    overflow: hidden;
+  /* background-color: beige; */
+  width: 100%;
+  height: 100%;
+  overflow: hidden;
 }
 
-.gridItemAdaptiv>img {
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
-    /* object-position: center; */
+.gridItemAdaptiv > img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  /* object-position: center; */
 }
 
 /* footer */
 .footerMenu {
-    display: flex;
-    text-align: left;
-    justify-content: space-between;
-    margin: 20px 30px;
+  display: flex;
+  text-align: left;
+  justify-content: space-between;
+  margin: 20px 30px;
 }
 
 .footerContent {
-    display: flex;
-    justify-content: space-between;
-    padding-top: 5px;
+  display: flex;
+  justify-content: space-between;
+  padding-top: 5px;
 }
 
-.footerContent>a {
-    color: grey;
-    text-decoration: none;
+.footerContent > a {
+  color: grey;
+  text-decoration: none;
 }
 
-.footerContent>a:hover {
-    text-decoration: underline;
+.footerContent > a:hover {
+  text-decoration: underline;
 }
 
 .social {
-    display: flex;
-    gap: 15px;
-    margin-left: 30px;
+  display: flex;
+  gap: 15px;
+  margin-left: 30px;
 }
 
 .whiteImg {
-    cursor: pointer;
+  cursor: pointer;
 }
 
 .copy {
-    margin-top: 10px;
+  margin-top: 10px;
 }
