--- a/lesson_24/style.css
+++ b/lesson_24/style.css
@@ -1,56 +1,112 @@
 * {
+  margin: 0;
+  padding: 0;
   box-sizing: border-box;
 }
 
 body {
   display: flex;
   flex-direction: column;
+  min-height: 100vh;
   align-items: center;
+  background: #2193b0; /* fallback for old browsers */
+  background: -webkit-linear-gradient(
+    to right,
+    #6dd5ed,
+    #2193b0
+  ); /* Chrome 10-25, Safari 5.1-6 */
+  background: linear-gradient(
+    to right,
+    #6dd5ed,
+    #2193b0
+  ); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
 }
 
-.card {
-  position: relative;
-  min-width: 300px;
-  min-height: 200px;
-  padding: 20px;
-  margin: 100px 10px 100px;
-  border: 1px solid black;
-  border-radius: 5px;
+.header {
+  display: block;
+  display: flex;
+  align-items: center;
+  position: fixed;
+  top: 0;
+  width: 100%;
+  background-color: grey;
+  height: 80px;
+  z-index: 2;
+  background: #0f2027; /* fallback for old browsers */
+  background: -webkit-linear-gradient(
+    to top,
+    #2c5364,
+    #203a43,
+    #0f2027
+  ); /* Chrome 10-25, Safari 5.1-6 */
+  background: linear-gradient(
+    to top,
+    #2c5364,
+    #203a43,
+    #0f2027
+  ); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
 }
 
-.card > h1 {
-    text-align: center;
+.links {
+  padding-left: 30px;
+  list-style: none;
+  display: flex;
+  gap: 20px;
 }
 
-.weatherInfoElement {
-  margin: 10px 0px 10px;
+.links a {
+  color: white;
+  text-decoration: none;
 }
 
-.weatherDesc {
-  margin: 10px 0px 10px;
-  color: darkmagenta;
-  font-style: italic;
+.links a:hover {
+  text-decoration: underline;
 }
 
-.conten-api {
-    display: none;
+.main {
+  flex: 1;
+  margin-bottom: 20px;
 }
 
-/* HTML: <div class="loader"></div> */
-/* .loader {
+.fa-solid {
+  color: #ffd43b;
+}
+
+.footer {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-top: auto;
+  width: 100%;
+  height: 100px;
+  gap: 10px;
+  background-color: grey;
+  background: #0f2027; /* fallback for old browsers */
+  background: -webkit-linear-gradient(
+    to bottom,
+    #2c5364,
+    #203a43,
+    #0f2027
+  ); /* Chrome 10-25, Safari 5.1-6 */
+  background: linear-gradient(
+    to bottom,
+    #2c5364,
+    #203a43,
+    #0f2027
+  ); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+  color: white;
+}
+
+.loader {
   display: none;
   --d: 22px;
   width: 4px;
   height: 4px;
   border-radius: 50%;
-  color: #25b09b;
-  box-shadow: calc(1 * var(--d)) calc(0 * var(--d)) 0 0,
-    calc(0.707 * var(--d)) calc(0.707 * var(--d)) 0 1px,
-    calc(0 * var(--d)) calc(1 * var(--d)) 0 2px,
-    calc(-0.707 * var(--d)) calc(0.707 * var(--d)) 0 3px,
-    calc(-1 * var(--d)) calc(0 * var(--d)) 0 4px,
-    calc(-0.707 * var(--d)) calc(-0.707 * var(--d)) 0 5px,
-    calc(0 * var(--d)) calc(-1 * var(--d)) 0 6px;
+  color: #c5e5ec;
+  box-shadow: calc(1 * var(--d)) calc(0 * var(--d)) 0 0 #ebb92e,
+    calc(0.707 * var(--d)) calc(0.707 * var(--d)) 0 1px #c5e5ec,
+    calc(0 * var(--d)) calc(1 * var(--d)) 0 2px #f16d7a;
   animation: l27 1s infinite steps(8);
 
   position: absolute;
@@ -59,36 +115,91 @@ body {
   margin-top: -2px;
   margin-left: -2px;
 }
+
 @keyframes l27 {
   100% {
     transform: rotate(1turn);
   }
-} */
+}
 
+.headerMob {
+  display: none;
+  display: flex;
+  align-items: center;
+  position: fixed;
+  top: 0;
+  width: 100%;
+  background-color: grey;
+  height: 80px;
+  z-index: 1;
+  background: #0f2027; /* fallback for old browsers */
+  background: -webkit-linear-gradient(
+    to top,
+    #2c5364,
+    #203a43,
+    #0f2027
+  ); /* Chrome 10-25, Safari 5.1-6 */
+  background: linear-gradient(
+    to top,
+    #2c5364,
+    #203a43,
+    #0f2027
+  ); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+}
 
-.loader {
+.log {
+  display: none;
+}
+
+.menu {
+  display: none;
+}
+
+@media (max-width: 740px) {
+  .header {
+    display: none;
+  }
+
+  .headerMob {
     display: block;
-    --d: 22px;
-    width: 4px;
-    height: 4px;
-    border-radius: 50%;
-    color: #25b09b;
-    box-shadow: 
-      calc(1 * var(--d)) calc(0 * var(--d)) 0 0 #ebb92e,
-      calc(0.707 * var(--d)) calc(0.707 * var(--d)) 0 1px #35c4e8,
-      calc(0 * var(--d)) calc(1 * var(--d)) 0 2px #f16d7a;
-    animation: l27 1s infinite steps(8);
-  
+    display: flex;
+    flex-wrap: nowrap;
+    justify-content: space-between;
+  }
+
+  .log {
+    display: block;
+    margin-left: 20px;
+  }
+
+  .menu {
+    display: block;
+    margin-right: 20px;
+  }
+
+  /* Стили для контейнера выпадающего меню (скрытый по умолчанию) */
+  .dropdown-content {
+    display: none;
     position: absolute;
-    top: 50%;
-    left: 50%;
-    margin-top: -2px;
-    margin-left: -2px;
+    right: 20px; /* Сдвигаем меню влево */
+    background-color: #f9f9f9;
+    border-radius: 15px 0px 15px 15px;
+    min-width: 160px;
+    box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
+    z-index: 1;
+    padding: 10px;
   }
-  
-  @keyframes l27 {
-    100% {
-      transform: rotate(1turn);
-    }
+
+  /* Стили для элементов выпадающего меню */
+  .dropdown-content a {
+    color: black;
+    padding: 8px 15px;
+    text-decoration: none;
+    display: block;
   }
-  
+
+  /* Показывать выпадающее меню при наведении на кнопку */
+  .menu:hover .dropdown-content {
+    display: block;
+  }
+}
